--- a/css/slider.css
+++ b/css/slider.css
@@ -1,8 +1,12 @@
 /*slider modo dispositivo*/
+.contenedorporfolio{
+  background-color: black;
+}
+
 .contenedor_slider_index {
   margin: auto;
-  width: 100%;
-  max-height: 96vh;
+  width: 90%;
+  max-height: 95vh;
   position: relative;
   overflow-x: hidden;
 }
@@ -10,8 +14,10 @@
 .slider_index {
   display: flex;
   width: 400%;
-  height: 90vh;
+  height: 95vh;
   margin-left: -100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .slider_section_index {
@@ -21,7 +27,7 @@
 .slider_index img {
   display: block;
   width: 100%;
-  height: 90vh;
+  height: 80vh;
   object-fit: cover;
 }
 
@@ -59,7 +65,7 @@
 
 .contenedor_slider_index .dots{
   position: absolute;
-  bottom: 50px;
+  bottom: 130px;
   color: #fff;
   left: 0;
   width: 100%;
