--- a/css/atmospheric.css
+++ b/css/atmospheric.css
@@ -7,8 +7,11 @@
 /*Comienzo Arreglar Header*/
 
 header {
-  background: rgba(255, 255, 255, 0.788);
-  backdrop-filter: blur(8px);
+  background: rgb(255, 255, 255);
+}
+
+header.headerscroll {
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.082);
 }
 
 #centrarlogotipo {
@@ -42,7 +45,7 @@ header .linea-3 {
   align-items: center;
   padding-bottom: 0px;
   padding-left: 15px;
-  margin-top: 65px;
+  margin-top: 60px;
   width: 96, 5vw;
 }
 
@@ -66,7 +69,7 @@ header .linea-3 {
 }
 
 .cont_carrusel_scroll h2 {
-  color: rgb(199, 199, 199);
+  color: rgb(173, 172, 172);
   font-size: 0.9em;
   font-weight: 400;
   letter-spacing: 1px;
@@ -131,6 +134,19 @@ header .linea-3 {
 /*Lightbox modo pc*/
 
 @media screen and (min-width: 660px) {
+
+  .carrusel_scroll {
+    margin-top: 120px;
+  }
+
+  header .contenedor .centrarlogotipo {
+    border-bottom: 1px solid rgb(228, 228, 228);
+  }
+
+  .redes_sociales1 p, .redes_sociales1 #ico-gmail, .redes_sociales a {
+    display: block;
+  }
+
   .textocarrusel{
     margin-left: 50px;
   }
