--- a/css/atmospheric.css
+++ b/css/atmospheric.css
@@ -33,6 +33,10 @@ header .linea-3 {
   background-color: rgb(41, 41, 43);
 }
 
+#email_txt{
+  display: block;
+}
+
 /*Fin Arreglar Header*/
 
 /*Comienzo grid scroll fotos 2*/
