--- a/css/inicio.css
+++ b/css/inicio.css
@@ -615,7 +615,7 @@
   /*Comienzo imagen fija 2 modo dispositivo*/
 
   .contenedor_imagenfija_2 {
-    background-image: url(../images/inicio/banner_5.JPG);
+    background-image: url(../images/inicio/banner_5.jpg);
     background-position-y: 40%;
   }
 
